# 1Dsolver

./: CMakeLists.txt  README.md
python/: plotter.py  reader.py
src/: CMakeLists.txt  input.hpp  manual.hpp  solver.cpp
